<resources>
    <string name="app_name">CybexDex</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_setting">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_faq">Application</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_order_history">Order History</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_transfer_records">Transfer Records</string>
    <string name="title_transfer_details">Transfer Details</string>
    <string name="title_deposit_records">Deposit Records</string>
    <string name="title_withdraw_records">Withdraw Records</string>
    <string name="popular_title">most popular</string>
    <string name="watch_list_name_vol">Name/Vol</string>
    <string name="watch_list_new_price_title">Last Price</string>
    <string name="watch_list_vibration_range_title">24h Chg%</string>
    <string name="log_in_cybex">Log in Cybex</string>
    <string name="account_balance">Your Total Balance(CYB):</string>
    <string name="account_introduction_text">CYBEX is a decentralized exchange that seeks to improve the liquidity of crypto-assets that’s more transparent, highly efficient and secure.</string>
    <string name="account_available_asset">Your Portfolio</string>
    <string name="account_view_all">View All</string>
    <string name="account_other_asset">Asset Operations</string>
    <string name="account_hello">Hello,</string>
    <string name="account_membership_basic">Basic Member</string>
    <string name="account_membership_lifetime">Lifetime Member</string>
    <string name="account_balance_dialog_title">BALANCE</string>
    <string name="account_balance_dialog_content">This is the estimated value of all your assets,including any hidden assets,open orders,debt and collateral.The estimate is done using only live blockchain data and may not be perfectly accurate.</string>
    <string name="account_balance_dialog_button">OK</string>
    <string name="text_my_balance">My Balance</string>
    <string name="text_opened_orders">Opened Orders</string>
    <string name="text_lockup_assets">Lockup Assets</string>
    <string name="text_deposit_withdraw">Deposit/Withdraw</string>
    <string name="text_address_management">Address Management</string>
    <string name="balance_page_title">My Balance</string>
    <string name="balance_page_total_balance">Your Total Balance(CYB)</string>
    <string name="balance_page_transfer">Transfer</string>
    <string name="balance_page_no_asset">No Asset</string>
    <string name="balance_page_frozen_no_asset">Frozen: --</string>
    <string name="balance_page_frozen_asset">Frozen:</string>
    <string name="open_order_buy">BUY</string>
    <string name="open_order_sell">SELL</string>
    <string name="open_orders_title">Opened Orders</string>
    <string name="open_order_price_amount">Order Price/Order Amount</string>
    <string name="open_order_filled_cancel">Filled/Cancel</string>
    <string name="markets_title">Market</string>
    <string name="market_page_buy_price">Buy Price(--)</string>
    <string name="market_page_volume_short">Vol</string>
    <string name="market_page_sell_price">Sell Price(--)</string>
    <string name="market_page_trade_history_price">Price(--)</string>
    <string name="market_page_trade_history_date">Time</string>
    <string name="market_page_trade_history_base">Total(--)</string>
    <string name="market_page_trade_history_quote">Amount(--)</string>
    <string name="market_page_order_book">Order Book</string>
    <string name="market_page_trade_history">Market Trades</string>
    <string name="k_ma">MA(5):</string>
    <string name="k_ma5">MA(5):</string>
    <string name="k_ma10">MA(10):</string>
    <string name="k_ma20">MA(20):</string>
    <string name="k_boll">BOLL:</string>
    <string name="k_ema5">EMA(5):</string>
    <string name="k_ema10">EMA(10)</string>
    <string name="index_high">High</string>
    <string name="index_low">Low</string>
    <string name="index_open">Open</string>
    <string name="index_close">Close</string>
    <string name="index_vary">Change</string>
    <string name="index_price">Price</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_chinese">简体中文</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_version">Version</string>
    <string name="setting_frequency">Frequency</string>
    <string name="setting_theme_dark">Dark</string>
    <string name="setting_theme_light">Light</string>
    <string name="setting_version_is_the_latest">The current version is the latest one</string>
    <string name="setting_version_update_available">Update Available</string>
    <string name="setting_version_update_content">A new version of CybexDex is available,Please update to newest version now.</string>
    <string name="setting_version_update_next_time">Next</string>
    <string name="setting_version_update_now">Update</string>
    <string name="setting_frequency_ordinary_market">Ordinary Market</string>
    <string name="setting_frequency_real_time_market">Real-time Market</string>
    <string name="setting_frequency_real_time_market_only_wifi">Real-time Market(WiFi Only)</string>
    <string name="text_cancel">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_register">Sign Up</string>
    <string name="have_account_login">Already have an account?</string>
    <string name="prompt_user_name">Account Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_pin_code">Pin Code</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">Incorrect Password or Account</string>
    <string name="text_ok">OK</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="login_cloud_wallet">Use Cloud Wallet mode to login Account</string>
    <string name="register_create_cloud_wallet">Use Cloud Wallet mode to create Account</string>
    <string name="register_dialog_title">ATTENTIONS</string>
    <string name="register_dialog_confirm">Confirm</string>
    <string name="register_dialog_content_current_password">Current Password:</string>
    <string name="register_dialog_content_attentions">
        • I understand that i will lose access to my funds if i LOSE my password\n
        • I understand that no one can RECOVER my password if i lose or forget it\n
        • I have WRITTEN DOWN or otherwise STORED my password</string>
    <string name="import_activity_unknown_error">Some error occurred.</string>
    <string name="import_activity_private_key_invalid">Invalid private key.</string>
    <string name="import_activity_account_invalid">The account does not exist.</string>
    <string name="import_activity_account_not_match_key">The account and the private key do not match.</string>
    <string name="import_activity_account_name_invalid">The account name cannot be found.</string>
    <string name="import_activity_connect_failed">Failed to connect to server.</string>
    <string name="import_activity_file_failed">Cannot read content from the file.</string>
    <string name="import_activity_password_invalid">Invalid password.</string>
    <string name="import_activity_file_bin_password_invalid">Invalid wallet file or password.</string>
    <string name="create_account_activity_network_fail">Failed to connect to server</string>
    <string name="create_account_activity_account_object_exist">The account has already existed</string>
    <string name="create_account_activity_response_fail">Server failed to response</string>
    <string name="create_account_activity_create_fail">Failed to sign up</string>
    <string name="create_account_account_name_error_full_letter">The account name cannot contain only letters</string>
    <string name="create_account_account_name_too_short">The account name is too short</string>
    <string name="create_account_account_name_error_start_letter">The account name should start with a letter</string>
    <string name="create_account_account_name_error_dash_end">The account name can not end with a dash</string>
    <string name="create_account_account_name_should_not_contain_continuous_dashes">The account name should not contain continuous dashes</string>
    <string name="create_account_account_name_should_only_contain_letter_dash_and_numbers">The account name should only contain lowercase letter,dash and numbers</string>
    <string name="create_account_pin_code_not_correct">Incorrect verify code</string>
    <string name="create_account_failure">create account is failed</string>
    <string name="create_account_password_must_at_least_12_characters">The password must at least 12 characters</string>
    <string name="create_account_password_error">Password must be at least 12 characters and must contain upper case, lower case, numbers and special characters</string>
    <string name="create_account_password_confirm_error">Two passwords do not match</string>
    <string name="open_orders_all">All</string>
    <string name="open_orders_buy">Buy</string>
    <string name="open_orders_sell">Sell</string>
    <string name="open_orders_total_value">Total Value:</string>
    <string name="open_orders_sell_total_value">Sell Total Value:</string>
    <string name="open_orders_buy_total_value">Buy Total Value:</string>
    <string name="open_orders_volume">Amount:</string>
    <string name="portfolio_price">Price(CYB)</string>
    <string name="portfolio_24h">24h</string>
    <string name="portfolio_title">Your Portfolio</string>
    <string name="assets_amount">Assets/Amount</string>
    <string name="progress_expire_date">Progress/Expiration Time</string>
    <string name="locked_assets">Lockup Assets</string>
    <string name="network_connection_is_not_available">network connection is not available</string>
    <string name="tab_buy">BUY</string>
    <string name="tab_sell">SELL</string>
    <string name="tab_open_orders">Open Orders</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_transfer_records">Transfer Records</string>
    <string name="menu_withdraw_records">Withdraw Records</string>
    <string name="menu_deposit_records">Deposit Records</string>
    <string name="text_limit">Limit</string>
    <string name="text_empty">--</string>
    <string name="text_asset_price">Price(--)</string>
    <string name="text_asset_amount">Amount(--)</string>
    <string name="text_percentage_25">25%</string>
    <string name="text_percentage_50">50%</string>
    <string name="text_percentage_75">75%</string>
    <string name="text_percentage_100">100%</string>
    <string name="text_available">Available</string>
    <string name="text_fee">Fee</string>
    <string name="text_total">Total</string>
    <string name="text_buy">Buy</string>
    <string name="text_sell">Sell</string>
    <string name="text_not_enough">Not enough</string>
    <string name="text_login_in_to_exchange">Login in to exchange</string>
    <string name="dialog_text_title_limit_order_create_confirmation">CONFIRMATION</string>
    <string name="dialog_text_cancel">Cancel</string>
    <string name="dialog_text_confirm">Confirm</string>
    <string name="dialog_text_account">Account:</string>
    <string name="dialog_text_fee">Fee:</string>
    <string name="dialog_text_quantity">Quantity:</string>
    <string name="dialog_text_memo">Memo:</string>
    <string name="dialog_version_update">Version Update</string>
</resources>