<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        style="@style/font_grey_large"
        android:background="@color/dialog_title_background_color"
        android:gravity="center"
        android:text="@string/register_dialog_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_padding"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/font_grey_medium"
            android:text="@string/register_dialog_content_current_password"
            android:paddingBottom="@dimen/dialog_content_line_spacing_extra" />

        <TextView
            android:id="@+id/register_dialog_content_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/font_grey_medium"
            android:paddingBottom="@dimen/dialog_content_line_spacing_extra"
            android:textColor="@color/primary_color_orange"
            android:text="123456"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/font_grey_medium"
            android:text="@string/register_dialog_content_attentions"
            android:lineSpacingExtra="@dimen/dialog_content_line_spacing_extra" />

        <Button
            android:id="@+id/register_dialog_button"
            android:background="@drawable/bg_btn_orange_gradient_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/font_white_large"
            android:text="@string/register_dialog_confirm"
            android:layout_marginTop="@dimen/dialog_margin"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>