<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_header_order_history_margin_top"
        android:weightSum="4">

        <TextView
            style="@style/font_gray_bold_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/market_page_trade_history_price" />

        <TextView
            android:id="@+id/market_page_trade_history_quote"
            style="@style/font_gray_bold_small"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/market_page_trade_history_quote"/>

        <TextView
            android:id="@+id/market_page_trade_history_base"
            style="@style/font_gray_bold_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:text="@string/market_page_trade_history_base"/>

        <TextView
            style="@style/font_gray_bold_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/market_page_trade_history_date" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/trade_history_list"
        android:name="com.cybexmobile.Fragments.MarketTradeHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/recycler_view_margin_start_end"
        android:layout_marginEnd="@dimen/recycler_view_margin_start_end"
        tools:context="com.cybexmobile.fragment.MarketTradeHistoryFragment"
        tools:listitem="@layout/item_trade_history" />

</LinearLayout>
