<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:subtitleTextColor="@color/primary_color_grey"
        app:titleTextColor="@color/primary_color_grey"
        app:title=""
        app:navigationIcon="@drawable/ic_back_24_px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_orders_title"
            style="@style/font_white_dark_bold_large"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/open_orders_segmented_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:sc_border_width="@dimen/width_1"
        app:sc_checked_text_color="@color/font_color_white_dark"
        app:sc_corner_radius="@dimen/corner_radius_4"
        app:sc_tint_color="@color/primary_color_grey">

        <RadioButton
            android:id="@+id/open_orders_segment_all"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/open_orders_all" />

        <RadioButton
            android:id="@+id/open_orders_segment_buy"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_orders_buy" />

        <RadioButton
            android:id="@+id/open_orders_segment_sell"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_orders_sell" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <TextView
        android:id="@+id/open_orders_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_gray_large"
        android:alpha="0.5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin_double"
        android:text="@string/open_orders_total_value"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/open_orders_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/font_white_dark_xxlarge"
        android:text="≈¥0.0000"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/open_orders_recycler_view"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>